.k8s/apps/poise.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: poise
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: poise
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 2bca12bfa41587fe547a2cff3341fb94f9ec1cdf
    kubenix/module-instance: poise
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: poise
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: poise
      app.kubernetes.io/name: poise
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: poise
        app.kubernetes.io/name: poise
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: S3_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  key: AWS_ACCESS_KEY_ID
                  name: poise-s3
            - name: S3_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  key: AWS_SECRET_ACCESS_KEY
                  name: poise-s3
          image: ghcr.io/josevictorferreira/poise:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /up
              port: 3000
            periodSeconds: 30
            timeoutSeconds: 5
          name: main
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /up
              port: 3000
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 256Mi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /up
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      imagePullSecrets:
        - name: ghcr-registry-secret
      serviceAccountName: default
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.159
    lbipam.cilium.io/sharing-key: poise
  labels:
    app.kubernetes.io/instance: poise
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: poise
    app.kubernetes.io/service: poise
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 2bca12bfa41587fe547a2cff3341fb94f9ec1cdf
    kubenix/module-instance: poise
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: poise
  namespace: apps
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: poise
    app.kubernetes.io/name: poise
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: poise
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: poise
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 2bca12bfa41587fe547a2cff3341fb94f9ec1cdf
    kubenix/module-instance: poise
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: poise
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: poise.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: poise
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - poise.josevictor.me
      secretName: wildcard-tls
